--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mdi/font": "6.2.95",
     "roboto-fontface": "*",
+    "vee-validate": "^4.12.6",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
     "vuetify": "^3.5.8"
