--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mdi/font": "6.2.95",
+    "axios": "^1.6.8",
     "roboto-fontface": "*",
     "vee-validate": "^4.12.6",
     "vue": "^3.4.21",
